# tblgen-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/actions/setup/: action.yaml
.github/workflows/: document.yaml  release.yaml  test.yaml
cc/include/: TableGen.h
cc/lib/: Record.cpp  RecordKeeper.cpp  RecordVal.cpp  TableGen.cpp  TableGen.hpp  Utility.cpp
examples/: basic.rs  error_handling.rs  field_types.rs  instruction_set.rs
src/: error.rs  init.rs  lib.rs  record.rs  record_keeper.rs  string_ref.rs
tools/: setup.sh
