[package]
name = "tblgen"
version = "0.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Daan Vanoverloop", "Yota Toyama", "Edgar Luque"]
description = "Safe Rust bindings for TableGen."
repository = "https://github.com/mlir-rs/tblgen-rs"
keywords = ["llvm", "tablegen", "bindings", "wrapper"]
categories = ["development-tools::ffi"]
documentation = "https://mlir-rs.github.io/tblgen-rs/tblgen/"
exclude = ["doc/"]

[features]
default = ["llvm21-0"]
llvm16-0 = []
llvm17-0 = []
llvm18-0 = []
llvm19-0 = []
llvm20-0 = []
llvm21-0 = []

[dependencies]
thiserror = "2.0.12"
paste = "1.0.15"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.17"
